    work again.
  * bug fix: result form in DO is not contained in the implicit
    TAGBODY.
  * incompatible change: ICR structure is changed; the value part of
    CONTINUATION is now called LVAR; corresponding functions are
    renamed (e.g. SB-C::CONTINUATION-TYPE has become SB-C::LVAR-TYPE).
  * added type deriver for ISQRT (thanks to Robert E. Brown).
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** the RETURN clause in LOOP is now equivalent to DO (RETURN ...).
    ** ROUND and FROUND now give the right answer when given very
       small float arguments.
    ** (FLOAT X) for X of type DOUBLE-FLOAT now returns X in all
       circumstances.
    ** optimizer for (EXPT X 0) did not work for X not of type FLOAT.
    ** (GCD 0 <negative-integer>) returned <negative-integer>.
    ** LCM should return a non-negative integer.
    ** PARSE-INTEGER returned the index of a terminator instead of the
       upper bounding index of a substring in case :JUNK-ALLOWED NIL.
    ** PARSE-INTEGER returned an incorrect index being applied to a
       displaced string.
    ** LCM with two arguments of 0 returns 0 rather than signalling
       DIVISION-BY-ZERO.
    ** unsigned addition of a 32-bit constant with the high bit set no
       longer causes an internal compiler error on the x86.
    ** LOGBITP accepts a non-negative bignum as its INDEX argument.
    ** compiler incorrectly derived types of DPB and DEPOSIT-FIELD
       with negative last argument.
    ** byte specifiers with zero size and position no longer cause
       an error during type derivation.
    ** bignum multiplication on the Alpha platform now returns the
       right answer.
  * builds on SuSE AMD64, although still generates a 32-bit binary.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE