@@ -351,8 +351,10 @@
 		     (push (pop-option) reversed-evals))
 		    ((string= option "--load")
 		     (pop-option)
-		     (push (concatenate 'string "(LOAD \"" (pop-option) "\")")
-			   reversed-evals))
+		     (push
+		      ;; FIXME: see BUG 296
+		      (concatenate 'string "(|LOAD| \"" (pop-option) "\")")
+		      reversed-evals))
 		    ((string= option "--noprint")
 		     (pop-option)
 		     (setf noprint t))
@@ -362,10 +364,10 @@
 		    ((string= option "--noprogrammer")
 		     (warn "treating deprecated --noprogrammer as --disable-debugger")
 		     (pop-option)
-		     (push "(DISABLE-DEBUGGER)" reversed-evals))
+		     (push "(|DISABLE-DEBUGGER|)" reversed-evals))
 		    ((string= option "--disable-debugger")
 		     (pop-option)
-		     (push "(DISABLE-DEBUGGER)" reversed-evals))
+		     (push "(|DISABLE-DEBUGGER|)" reversed-evals))
 		    ((string= option "--end-toplevel-options")
 		     (pop-option)
 		     (return))
